Split README into focused documentation files
- README.md: Streamlined quick-start guide (~170 lines, was ~1280)
- docs/USER_GUIDE.md: Detailed usage instructions
- docs/AI_ANALYSIS.md: AI providers, CLI mode, cost tracking
- docs/CONFIGURATION.md: All settings and options
- docs/TROUBLESHOOTING.md: Common issues and solutions
- docs/DEVELOPMENT.md: Building from source, project structure

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>